--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@ backend/site-packages/
 backend/__pycache__/*
 backend/__pycache__/
 backend/__pycache__/
+backend/.ssh/*
+backend/.ssh/
 
 frontend/node_modules/*
-frontend/node_modules/
 frontend/.env
 frontend/.env.local.example
