--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@ uvicorn[standard]==0.30.3
 
 python-dotenv
 faiss-cpu
-sentence-transformers
+fastembed==0.3.3
 markdown
 beautifulsoup4
 requests
@@ -13,3 +13,4 @@ tqdm
 cerebras-cloud-sdk==1.7.0
 httpx==0.27.0
 httpcore==1.0.4
+dateparser==1.2.0
