--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,11 @@
     "react-markdown": "^9.0.3",
     "rehype-highlight": "7.0.0",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "4.0.0"
+    "rehype-sanitize": "^6.0.0",
+    "remark-breaks": "^3.0.0",
+    "remark-external-links": "^9.0.1",
+    "remark-gfm": "4.0.0",
+    "remark-slug": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
