--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,6 @@ cerebras-cloud-sdk==1.7.0
 httpx==0.27.0
 httpcore==1.0.4
 dateparser==1.2.0
+sentence-transformers==2.7.0
+torch==2.3.1+cpu; platform_system != 'Darwin'
+torch==2.3.1; platform_system == 'Darwin'
