--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "highlight.js": "11.9.0",
+    "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "prettier": "^3.3.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^9.0.3",
