--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,3 +17,5 @@ dateparser==1.2.0
 sentence-transformers==2.7.0
 torch==2.3.1+cpu; platform_system != 'Darwin'
 torch==2.3.1; platform_system == 'Darwin'
+pypdf==4.3.1
+numpy==1.26.4
