--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "highlight.js": "11.9.0",
+    "katex": "^0.16.22",
     "lucide-react": "^0.539.0",
+    "mdast-util-to-string": "^4.0.0",
     "next": "15.4.6",
     "prettier": "^3.3.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-markdown": "^9.0.3",
+    "react-markdown": "^9.1.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "7.0.0",
+    "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
+    "rehype-slug": "^6.0.0",
     "remark-breaks": "^3.0.0",
     "remark-external-links": "^9.0.1",
     "remark-gfm": "4.0.0",
-    "remark-slug": "^7.0.1"
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-slug": "^7.0.1",
+    "remark-stringify": "^11.0.0",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
