--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,3 +19,5 @@ torch==2.3.1+cpu; platform_system != 'Darwin'
 torch==2.3.1; platform_system == 'Darwin'
 pypdf==4.3.1
 numpy==1.26.4
+redis==5.0.1
+openai==1.54.0
