--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,21 +1,31 @@
-.git
-.gitignore
-__pycache__/
+__pycache__
 *.pyc
 *.pyo
 *.pyd
+.Python
+env
+pip-log.txt
+pip-delete-this-directory.txt
+.tox
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
 *.log
-.env
-.env.*
-.venv/
-node_modules/
-dist/
-build/
-.vscode/
-.idea/
-
-# project-specific
-data/
-vault/
-vault_repo/
-images/
+.git
+.mypy_cache
+.pytest_cache
+.hypothesis
+.venv
+venv/
+ENV/
+env/
+.ssh/
+.DS_Store
+*.md
+.gitignore
+README.md
+dev.sh
+chat_cli.py
