--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,23 +1,33 @@
+# Core FastAPI dependencies
 fastapi==0.111.0
-pydantic==2.9.2          # newer, with manylinux wheels
-email-validator==2.2.0
 uvicorn[standard]==0.30.3
+pydantic==2.9.2
+python-dotenv==1.0.0
 
-python-dotenv
-faiss-cpu
-fastembed
-markdown
-beautifulsoup4
-requests
-tqdm
+# AI/ML dependencies
 cerebras-cloud-sdk==1.7.0
-httpx==0.27.0
-httpcore==1.0.4
-dateparser==1.2.0
+openai==1.54.0
 sentence-transformers==2.7.0
+faiss-cpu==1.7.4
+fastembed==0.2.0
+
+# Data processing
+numpy==1.26.4
 torch==2.3.1+cpu; platform_system != 'Darwin'
 torch==2.3.1; platform_system == 'Darwin'
+
+# Document processing
 pypdf==4.3.1
-numpy==1.26.4
+beautifulsoup4==4.12.2
+markdown==3.5.2
+
+# HTTP and networking
+httpx==0.27.0
+httpcore==1.0.4
+requests==2.31.0
+
+# Utilities
+tqdm==4.66.1
+dateparser==1.2.0
 redis==5.0.1
-openai==1.54.0
+email-validator==2.2.0
