--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ python-dotenv==1.0.0
 cerebras-cloud-sdk==1.7.0
 openai==1.54.0
 sentence-transformers==2.7.0
+huggingface-hub>=0.20.0
 faiss-cpu==1.7.4
 fastembed==0.2.0
 
